tests/fail/ch_nightly/invalid_custom_regex.stderr
error: regex parse error:
           ab(ab
             ^
       error: unclosed group

       In custom Regex format option
 --> $DIR/invalid_custom_regex.rs:2:30
  |
2 |     sscanf::scanf!("", "   {:/ab(ab/}   ", String).unwrap();
  |                              ^^^^^^^
